<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_matches"
        android:icon="@drawable/ic_soccer_field"
        android:title="@string/title_matches"/>

    <item
        android:id="@+id/navigation_league"
        android:icon="@drawable/ic_award_fixed"
        android:title="@string/title_league"/>

    <item
        android:id="@+id/navigation_myteam"
        android:icon="@drawable/ic_strategy"
        android:title="@string/title_myTeam"/>

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_star"
        android:title="@string/title_favorites"/>

    <item
        android:id="@+id/navigation_preferences"
        android:icon="@drawable/ic_control"
        android:title="@string/title_preferences"/>

</menu>
