<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_matches">

    <fragment
        android:id="@+id/navigation_matches"
        android:name="com.example.footyapp.ui.matches.MatchesFragment"
        android:icon="@drawable/ic_soccer_field"
        android:title="@string/title_matches"
        tools:layout="@layout/fragment_matches" />

    <fragment
        android:id="@+id/navigation_league"
        android:name="com.example.footyapp.ui.League.LeagueFragment"
        android:icon="@drawable/ic_award_fixed"
        android:title="@string/title_league"
        tools:layout="@layout/fragment_league" />

    <fragment
        android:id="@+id/navigation_myteam"
        android:name="com.example.footyapp.ui.TeamSquad.MyTeamFragment"
        android:icon="@drawable/ic_strategy"
        android:title="@string/title_myTeam"
        tools:layout="@layout/fragment_myteam_" />

    <fragment
    android:id="@+id/navigation_favorites"
    android:name="com.example.footyapp.ui.Favorites.FavoritesFragment"
    android:icon="@drawable/ic_star"
    android:title="@string/title_favorites"
    tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_preferences"
        android:name="com.example.footyapp.ui.Preferences.PreferencesFragment"
        android:icon="@drawable/ic_control"
        android:title="@string/title_preferences"
        tools:layout="@layout/fragment_preferences" />

</navigation>